@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}
abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<BaseBullet>
 }


class HeroAircraft {
    - {static} instance : HeroAircraft
    - shootNum:int
    - bulletStrategy:BulletStrategy
    - HeroAircraft(int LocationX, int LocationY, int speedX, int speedY, int hp)
    + setStrategy(BulletStrategy bulletStrategy)
    + forward():void
    + shoot():List<BaseBullet>
    + {static} getInstance(int LocationX, int LocationY, int speedX, int speedY, int hp) : HeroAircraft
}
AbstractAircraft <|-- HeroAircraft
HeroAircraft --> HeroAircraft : static instance

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot():List<BaseBullet>
}
AbstractEnemy <|-- MobEnemy

abstract class AbstractEnemy{
    - propSpeedY:int
    - random : Random
    - propFactory : PropFactory
    + AbstractEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + {abstract} getDropProb():double
    + {abstract} getPropType():int
    + dropProp():AbstractProp
}
AbstractAircraft <|-- AbstractEnemy

class EliteEnemy{
    - shootNum:int
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + getDropProb():double
    + getPropType():int
}

class ElitePlusEnemy{
    - shootNum:int
    + ElitePlusEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + getDropProb():double
    + getPropType():int
}

class EliteProEnemy{
    - shootNum:int
    + EliteProEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + getDropProb():double
    + getPropType():int
}

class BossEnemy{
    - shootNum:int
    + getDropProb():double
    + getPropType():int
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
}

AbstractEnemy <|-- EliteEnemy
AbstractEnemy <|-- ElitePlusEnemy
AbstractEnemy <|-- EliteProEnemy
AbstractEnemy <|-- BossEnemy

abstract class AbstractProp
{
    + AbstractProp(int locationX, int locationY, int speedX, int speedY)
    + {abstract}function():void
}
AbstractFlyingObject <|-- AbstractProp

class PropBlood{
    - {static} increaseBlood:int
    + PropBlood(int locationX, int locationY, int speedX, int speedY)
    + function(HeroAircraft heroAircraft):void
}

class PropBomb{
    + PropBomb(int locationX, int locationY, int speedX, int speedY)
    + function(HeroAircraft heroAircraft)):void
}

class PropBullet{
    + PropBullet(int locationX, int locationY, int speedX, int speedY)
    + function(HeroAircraft heroAircraft)):void
}

class PropBulletPlus{
    + PropBulletPlus(int locationX, int locationY, int speedX, int speedY)
    + function(HeroAircraft heroAircraft)):void
}

class PropFreeze{
    + PropFreeze(int locationX, int locationY, int speedX, int speedY)
    + function(HeroAircraft heroAircraft)):void
}

AbstractProp <|-- PropFreeze
AbstractProp <|-- PropBullet
AbstractProp <|-- PropBlood
AbstractProp <|-- PropBulletPlus
AbstractProp <|-- PropBomb

abstract class BaseBullet
{
    - power:int
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
	+ getPower():int
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet

@enduml